360574  Wrong parameter type for an ashmem ioctl() call on Android and ARM64
360749  kludge for multiple .rodata sections on Solaris no longer needed
360752  raise the number of reserved fds in m_main.c from 10 to 12
361207  Valgrind does not support the IBM POWER ISA 3.0 instructions, part 2
361226  s390x: risbgn (EC59) not implemented
361354  ppc64[le]: wire up separate socketcalls system calls
361926  Unhandled Solaris syscall: sysfs(84)
362009  Valgrind dumps core on unimplemented functionality before threads are created
362329  Valgrind does not support the IBM POWER ISA 3.0 instructions, part 3
362894  missing (broken) support for wbit field on mtfsfi instruction (ppc64)
362935  [AsusWRT] Assertion 'sizeof(TTEntryC) <= 88' failed
363680  add renameat2() support
363705  arm64 missing syscall name_to_handle_at and open_by_handle_at
363714  ppc64 missing syscalls sync, waitid and name_to/open_by_handle_at
363858  Add IBM ISA 3.0 support, patch set 4
364058  clarify in manual limitations of array overruns detections
364413  pselect sycallwrapper mishandles NULL sigmask
364728  Power PC, missing support for several HW registers in
        get_otrack_shadow_offset_wrk()
365273  Invalid write to stack location reported after signal handler runs
365912  ppc64BE segfault during jm-insns test (RELRO)
366344  Multiple unhandled instruction for Aarch64
359767  Valgrind does not support the IBM POWER ISA 3.0 instructions, part 1/5
361207  Valgrind does not support the IBM POWER ISA 3.0 instructions, part 2/5
362329  Valgrind does not support the IBM POWER ISA 3.0 instructions, part 3/5
363858  Valgrind does not support the IBM POWER ISA 3.0 instructions, part 4/5
364948  Valgrind does not support the IBM POWER ISA 3.0 instructions, part 5/5
365912  ppc64BE segfault during jm-insns test (RELRO)
366138  Fix configure errors out when using Xcode 8 (clang 8.0.0)
366344  Multiple unhandled instruction for Aarch64